apps/architecture-portal/versioned_docs/version-1.0.16.1/hosts/web-runtime.mdx
---
title: Web Runtime Host
area: hosts
status: implemented
host: web-runtime-host
owners: [hosts, web, audio]
source_paths:
  - docs/superpowers/specs/2026-08-03-lmdj-formal-web-runtime-host-design.md
  - docs/superpowers/plans/2026-08-03-lmdj-formal-web-runtime-host.md
  - apps/web-runtime-host
  - apps/web-runtime-host/module.json
  - packages/web-runtime-platform
  - products/lmdj/assembly.json
  - scripts/web-runtime-host.sh
  - docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md
  - tests/platform/web/host/web_runtime_host_manifest_gate.spec.mjs
  - tests/platform/web/host/web_runtime_host_lifecycle.spec.mjs
  - tests/platform/web/host/web_runtime_host_browser.spec.mjs
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {StatusBadge} from '@site/src/components/StatusBadge';

<BuildIdentity />

## 状态

<StatusBadge status="implemented" /> Formal Web Runtime Host `1.2.1` 已进入 Product Build `1.0.16.1` Assembly。Host 只依赖共享 Web Runtime Platform `0.1.1`，不直接依赖 Facade、Audio Runtime 或 Project I/O；同构建私有协议仍为 `1`。匹配 Product Build 的不可变快照状态与 provenance 由版本清单和 Portal 门禁派生，不在 current 页面手写生命周期结论。

## 目标边界

Main thread 只负责诊断 UI、manifest/hash 装载门、Window 能力、用户手势、生命周期观察与终止清理；共享 Web Runtime Platform 负责 DOM/MIDI 输入、有界 transport、Dedicated Worker OPFS 能力、Control/Facade 与 AudioWorklet 路径。Pointer、Keyboard、MIDI 汇入唯一 `trigger(flatSlot, velocity)` 路由。

## 分发与身份门禁

`scripts/web-runtime-host.sh build` 原子生成 `build/web/host/dist`：全部分发资产使用内容哈希文件名，canonical diagnostic distribution manifest 绑定 Product Build、Host `1.2.1`、Platform `0.1.1`、私有协议 `1`、固定 512 MiB heap、四项资源上限、固定 Emscripten 身份及精确资产 inventory。Browser Main 在装载 runtime 前校验完整形状与 canonical bytes；共享 native gate 在创建 proxy queue、OPFS、Facade 或 audio adapter 前再次验证 Product Assembly 注入的 Host/contract/version triple。任何漂移、重复或迟到初始化均 fail closed 为 `HOST_PROTOCOL_MISMATCH`。该 ownership 协议不是公开跨版本 Contract。

proof-only server 只暴露指定 dist，设置精确 COOP/COEP/CORP/CSP 与 WASM MIME；仅 index/manifest 使用 `no-store`，内容哈希资产使用 immutable cache。它不是生产发布服务。

## 生命周期门禁

普通 Trigger 与全部 `take.begin` 只在 `running` 接收。诊断 Project 的每个 awaited Host request 返回后都重新核对 page-lifetime admission；pagehide 后不得继续 import、assignment、final inspect 或 publication。修复结束后必须再次 `project.inspect`，且 final revision、诊断 Asset 与全部 64 个 Pad assignment 都匹配，才可请求 Snapshot publication。`HOST_RESTART_REQUIRED` 即使晚于 invalidation 返回也保持 sticky，`HOST_PROTOCOL_MISMATCH` 同样 fail closed；两者都只触发一次终止清理，页面重建前 direct/queued Load 不得重试。

中断同步关闭 runtime admission、清除 pressed state，并按 epoch 只发一次 Control suspend/seal。恢复必须同时具备 Context `running`、正整数 current/ack generation 相等，以及一个真实用户 recovery probe 的唯一 `voice_started`；visibility 或 pageshow 本身不能完成恢复。

## 自动化证据

`scripts/web-runtime-host.sh proof` 覆盖两次 clean build 的逐字节可复现性、deterministic inventory、proof-server headers/cache/no-follow ownership、双重 manifest gate，以及 Chromium packaged Main→shared Platform→Facade/OPFS→Wasm AudioWorklet 全旅程。可见顺序固定为 `Load diagnostic project -> ready -> Activate audio -> running -> trigger`，并覆盖 create/import/64 assignments、reload reopen、500 个 admission/outcome、20+1 Take、失败与 lifecycle 路径。WebKit 只在 mandatory primitive 可用时执行完整 smoke；缺少能力时必须输出结构化 limitation。本候选的实际命令结果在独立 acceptance 记录中报告，不继承旧 Build 的 PR、CI 或 merge 结论。

## 非能力

当前不能宣称 Creator 已具备完整 Sequence 编辑、离线安装/PWA 或生产部署，也不能把 WebKit automation 当作物理 Safari，或宣称 MIDI/iPad/延迟体验、`beta`/`stable` 已获准。

## 剩余验收边界

Formal Web Runtime Host 已进入 Assembly；自动化结果不升级物理体验结论。五个物理行继续保持：

| 物理行 | 状态 |
| --- | --- |
| macOS Safari Pointer | `deferred / unverified` |
| macOS Chrome Pointer | `deferred / unverified` |
| macOS Chrome physical MIDI | `deferred / unverified` |
| iPadOS Safari Touch | `deferred / unverified` |
| iPadOS Safari lifecycle | `deferred / unverified` |
